--- a/.github/workflows /repo-mirror.yml
+++ b/.github/workflows /repo-mirror.yml
@@ -4,7 +4,7 @@ name: HuaweiCloudDeveloper github repos mirror periodic job
 on:
   schedule:
     # Runs at 01:00 UTC (9:00 AM Beijing) every day
-    - cron:  '0 1 * * *'
+    - cron:  '*/5 * * * *'
 
 jobs:
   build:
@@ -20,6 +20,9 @@ jobs:
         dst: gitee/HuaweiCloudDeveloper
         dst_key: ${{ secrets.GITEE_SYNC_PRIVATE_KEY }}
         dst_token:  ${{ secrets.GITEE_SYNC_TOKEN }}
+        account_type: org
+        # black_list: 'repo_name,repo_name2'
+        static_list: testcontainers-doc
         clone_style: ssh
         force_update: true
         debug: true
