--- a/.github/workflows /repo-mirror.yml
+++ b/.github/workflows /repo-mirror.yml
@@ -2,6 +2,7 @@
 name: HuaweiCloudDeveloper github repos mirror periodic job
 
 on:
+  workflow_dispatch:
   schedule:
     # Runs at 01:00 UTC (9:00 AM Beijing) every day
     - cron:  '*/5 * * * *'
